updating value statements further

--- a/index.html
+++ b/index.html
@@ -306,18 +306,18 @@
             </div>
             <div class="container values content">
               <a id="values"></a>
-              <h2>Value Statement</h2>
+              <h2>Values Statement</h2>
               <p> At GWUSEC, we strive to conduct the highest quality academic research that is inclusive, diverse, and impactful. In those pursuits, we are guided by the following principles:
               <ul>
-                
-              <li> <b>scientific rigor</b> — we seek academic and scientific rigor in our research efforts to explore subject matters in-depth;</li>
-              <li> <b>creativity</b> — we reward creativity in our research, and do not confine or belittle others’ ideas; </li>
-              <li> <b>integrity</b> — we value honesty and accuracy in our communications and reports;</li>
-              <li> <b>ethics</b> — we conduct our research to the highest ethical standard with consideration to subjects, researchers, and the community at large;</li>
-              <li> <b>inclusion</b> — we include diverse ideas, mindsets, and objectives in our research, and we desire inclusivity in our research team across backgrounds, including, age, gender, race, ethnicity, religion, (dis)ability, economic background, and nationality;</li>
-              <li> <b>humility</b> — we are willing to admit when we are wrong and take action to correct mistakes in ourselves and offer support to others;</li>
-              <li> <b>compassion</b> — we show compassion to each other and to others, and support team members in cases when their physical or mental health, personal life or family warrants special consideration;</li>
-              <li> <b>justice</b> — we believe in justice and oppose discrimination based on age, gender, race, ethnicity, religion, (dis)ability, economic background and nationality, and condemn oppression in any form.</li>
+                <li> <b>creativity</b> — we reward creativity in our research, and do not confine or belittle others’ ideas; </li>
+                <li> <b>integrity</b> — we value honesty and accuracy in our communications and reports;</li>
+                <li> <b>ethics</b> — we consider the ethics of our research methods and treat our subjects with respect, always striving to minimize risk and maximize benefits;</li>
+                <li> <b>scientific rigor</b> — we seek academic and scientific rigor in our research efforts to explore subject matters in-depth;</li>
+
+              <li> <b>inclusion</b> — we recognize that that many groups have historically been marginalized in our field, and we strive to find ways to collaborate and partner with individuals across all backgrounds, races, and genders and uplift researchers and professionals who have been unjustly marginalized;</li>
+              <li> <b>humility</b> — we are willing to admit when we are wrong, take action to correct mistakes in ourselves, and treat mistakes as learning opportunities;</li>
+              <li> <b>compassion</b> — we show compassion to each other by supporting lab members in cases when their physical or mental health, personal life or family situation warrants special consideration;</li>
+              <li> <b>justice</b> —  we believe in racial justice and oppose discrimination based on age, gender, race, ethnicity, religion, (dis)ability, economic background and nationality, and condemn oppression in any form.</li>
               <li> <b>impact</b> — we are determined to conduct research that is impactful both within the scientific community and broadly for all humanity.</li>
               </ul>
               </p>
