Added Don to list of people

--- a/index.html
+++ b/index.html
@@ -209,6 +209,12 @@
                             <br>
                         </div>
                         <div class="col-sm text-center">
+                            <img src="imgs/people/013_don.jpg" width="200" alt="Dongkun Kim" class="img-thumbnail">
+                            <br>
+                            Dongkun Kim
+                            <br>
+                            Undergraduate
+                            <br>
                         </div>
                         <div class="col-sm text-center">
                         </div>
