updating a meeting time

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                             Once a month, we have a social hour and lab open house where students, faculty, and prospective collaborators can socialize.
                         </p>
                         <p>
-                            Second Friday of every month from 430-530, during the academic year.
+                            <strike>Second Friday of every month from 430-530, during the academic year.</strike><br> Time/Place TBD as we assess social distancing requirements.
                         </p>
                     </li>
                 </ul>
