Added Miles Grant

--- a/index.html
+++ b/index.html
@@ -217,6 +217,12 @@
                             <br>
                         </div>
                         <div class="col-sm text-center">
+                            <img src="imgs/people/014_miles.jpg" width="200" alt="Miles Grant" class="img-thumbnail">
+                            <br>
+                            Miles Grant
+                            <br>
+                            Undergraduate
+                            <br>
                         </div>
                         <div class="col-sm text-center">
                         </div>
