adding link to soups paper

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 <h2>Publications </h2>
                 <ul class="list-group">
                     <li class="list-group-item" aria-disabled="true">
-                      Raina Samuel, Philipp Markert, Adam J. Aviv, and Iulian Neamtiu. Knock, Knock. Who's There? On the Security of LG's Knock Codes. 2020 Symposium on Usable Security and Privacy (SOUPS'20). Pgs. 1-24. USENIX. 2020. (<a href="https://arxiv.org/abs/2006.03556">arxiv preprit</a>)
+                      Raina Samuel, Philipp Markert, Adam J. Aviv, and Iulian Neamtiu. <a href="https://www.usenix.org/conference/soups2020/presentation/samuel">Knock, Knock. Who's There? On the Security of LG's Knock Codes</a>. 2020 Symposium on Usable Security and Privacy (SOUPS'20). Pgs. 1-24. USENIX. 2020. (<a href="https://arxiv.org/abs/2006.03556">arxiv preprit</a>)
                     </li>
                     <li class="list-group-item" aria-disabled="true">
                         Philipp Markert, Daniel V. Bailey, Maximillian Golla, Markus D&uuml;rmuth, and Adam J. Aviv. <a href="https://doi.ieeecomputersociety.org/10.1109/SP40000.2020.00100">This PIN Can Be Easily Guessed: Analyzing the Security of Smartphone Unlock PINs</a>. 2020 IEEE Symposium on Security and Privacy (SP'20). Pgs. 1525-1542. IEEE Computer Society. 2020
