--- a/index.html
+++ b/index.html
@@ -339,6 +339,12 @@
                 <h2>Publications </h2>
                 <ul class="list-group">
                     <li class="list-group-item" aria-disabled="true">
+                      Timothy J. Forman and Adam J. Aviv. Double Patterns: A Usable Solution to Increase the Security of Android Unlock Patterns. In the proceedings of the 2020 Annual Computer Security Applications Conference (ACSAC'20). Dec. 2020.
+                    </li>
+                    <li class="list-group-item" aria-disabled="true">
+                        Hassan Khan, Jason Ceci, Jonah Stegman, Adam J. Aviv, Rozita Dara, Ravi Kuber. Widely Reused and Shared, Infrequently Updated, and Sometimes Inherited: A Holistic View of PIN Authentication in Digital Lives and Beyond. In the proceedings of the 2020 Annual Computer Security Applications Conference (ACSAC'20). Dec. 2020. 
+                    </li>
+                    <li class="list-group-item" aria-disabled="true">
                       Raina Samuel, Philipp Markert, Adam J. Aviv, and Iulian Neamtiu. <a href="https://www.usenix.org/conference/soups2020/presentation/samuel">Knock, Knock. Who's There? On the Security of LG's Knock Codes</a>. 2020 Symposium on Usable Security and Privacy (SOUPS'20). Pgs. 1-24. USENIX. 2020. (<a href="https://arxiv.org/abs/2006.03556">arxiv preprit</a>)
                     </li>
                     <li class="list-group-item" aria-disabled="true">
