--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 <div class="container news">
                     <h4>News</h4>
                     <ul>
+                      <li><span class="badge badge-secondary">Aug 2020</span> Timothy J. Forman and Adam J. Aviv have a new paper accepted at ACSAC'20 on Double Patterns</li>
+                      <li><span class="badge badge-secondary">Aug 2020</span> Hassan Khan, Jason Ceci, Jonah Stegman, Adam J. Aviv, Rozita Dara, Ravi Kuber have a new paper accepted at ACSAC'20 on PIN usage</li>
+
                       <li><span class="badge badge-secondary">June 2020</span> Raina Samuel, Philipp Markert, Adam J. Aviv, and Iulian Neamtiu have a new paper accepted at SOUPS'20 on the security and usability of Knock Codes. Read the <a href="https://arxiv.org/abs/2006.03556">arxiv (preprint)</a>.</li>
 
                       <li><span class="badge badge-secondary">June 2020</span> Yasmine Acar will be joining the CS department as an Assistant Professor and Co-lab director of GWUSEC lab starting January 2021. Welcome aboard!</li>
