--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                             The reading group is also "brown bag lunch" and has a social component.
                         </p>
                         <p>
-                            <strike>Thursdays 1130-1230. Currently meeting virtually.</strike> (Off for the summer, returning August)
+                            Tuesdau 1130-1230. Currently meeting virtually (email Prof. Aviv to be added to the mailing list).
                         </p>
                     </li>
                     <li><strong>Lab Scrum Meetings</strong>
