Added Darika Shaibekova

--- a/index.html
+++ b/index.html
@@ -228,7 +228,14 @@
                             <br>
                         </div>
                         <div class="col-sm text-center">
+                            <img src="imgs/people/015_darika.jpg" width="200" alt="Darika Shaibekova" class="img-thumbnail">
+                            <br>
+                            Darika Shaibekova
+                            <br>
+                            Undergraduate
+                            <br>
                         </div>
+                        
                     </div>
                     <em>If you are a current lab member or collaborator and would like to be added to the list of members, submit a pull request to the webpage repository.</em>
                     <div class="container external-lab">
