--- a/index.html
+++ b/index.html
@@ -350,17 +350,17 @@
                 <h2>Publications </h2>
                 <ul class="list-group">
                   <li class="list-group-item" aria-disabled="true">
-                    Hirak Ray, Flynn Wolf, Ravi Kuber, Adam J. Aviv. Why Older Adults (Don't) Use Password Managers. In the proceedings of the 2021 USENIX Security Symposium (Sec'21). Aug. 2021. 
+                    Hirak Ray, Flynn Wolf, Ravi Kuber, Adam J. Aviv. Why Older Adults (Don't) Use Password Managers. In the proceedings of the 2021 USENIX Security Symposium (Sec'21). Aug. 2021. (<a href="https://arxiv.org/abs/2010.01973">arxiv pre-print</a>)
                     </li>
 
                     <li class="list-group-item" aria-disabled="true">
-                      Timothy J. Forman and Adam J. Aviv. Double Patterns: A Usable Solution to Increase the Security of Android Unlock Patterns. In the proceedings of the 2020 Annual Computer Security Applications Conference (ACSAC'20). Dec. 2020.
+                      Timothy J. Forman and Adam J. Aviv. Double Patterns: A Usable Solution to Increase the Security of Android Unlock Patterns. In the proceedings of the 2020 Annual Computer Security Applications Conference (ACSAC'20). Dec. 2020. (<a href="https://arxiv.org/abs/2008.10681">arxiv pre-print</a>)
                     </li>
                     <li class="list-group-item" aria-disabled="true">
-                        Hassan Khan, Jason Ceci, Jonah Stegman, Adam J. Aviv, Rozita Dara, Ravi Kuber. Widely Reused and Shared, Infrequently Updated, and Sometimes Inherited: A Holistic View of PIN Authentication in Digital Lives and Beyond. In the proceedings of the 2020 Annual Computer Security Applications Conference (ACSAC'20). Dec. 2020. 
+                        Hassan Khan, Jason Ceci, Jonah Stegman, Adam J. Aviv, Rozita Dara, Ravi Kuber. Widely Reused and Shared, Infrequently Updated, and Sometimes Inherited: A Holistic View of PIN Authentication in Digital Lives and Beyond. In the proceedings of the 2020 Annual Computer Security Applications Conference (ACSAC'20). Dec. 2020.  (<a href="https://arxiv.org/abs/2008.10697">arxiv pre-print</a>)
                     </li>
                     <li class="list-group-item" aria-disabled="true">
-                      Raina Samuel, Philipp Markert, Adam J. Aviv, and Iulian Neamtiu. <a href="https://www.usenix.org/conference/soups2020/presentation/samuel">Knock, Knock. Who's There? On the Security of LG's Knock Codes</a>. 2020 Symposium on Usable Security and Privacy (SOUPS'20). Pgs. 1-24. USENIX. 2020. (<a href="https://arxiv.org/abs/2006.03556">arxiv preprit</a>)
+                      Raina Samuel, Philipp Markert, Adam J. Aviv, and Iulian Neamtiu. <a href="https://www.usenix.org/conference/soups2020/presentation/samuel">Knock, Knock. Who's There? On the Security of LG's Knock Codes</a>. 2020 Symposium on Usable Security and Privacy (SOUPS'20). Pgs. 1-24. USENIX. 2020. (<a href="https://arxiv.org/abs/2006.03556">arxiv pre-print</a>)
                     </li>
                     <li class="list-group-item" aria-disabled="true">
                         Philipp Markert, Daniel V. Bailey, Maximillian Golla, Markus D&uuml;rmuth, and Adam J. Aviv. <a href="https://doi.ieeecomputersociety.org/10.1109/SP40000.2020.00100">This PIN Can Be Easily Guessed: Analyzing the Security of Smartphone Unlock PINs</a>. 2020 IEEE Symposium on Security and Privacy (SP'20). Pgs. 1525-1542. IEEE Computer Society. 2020
