--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         <div class="container news">
           <h4>News</h4>
           <ul>
+            <li><span class="badge badge-secondary">Nov 2020</span> GWUSEC lab open house scheduled for Nov. 11, 2020 from 11:00am-12:30pm (EST). All are welcome. Register <a href="https://docs.google.com/forms/d/e/1FAIpQLScDpWNzjybJ1eV58owdMn-EA1LUHQbVRqaNKpMF6jex5FkmPw/viewform?usp=sf_link">here</a>. </li>
+
             <li><span class="badge badge-secondary">Oct 2020</span> Hirak Ray, Flynn Wolf, Ravi Kuber and Adam J. Aviv have a new paper accepted at USENIX Sec'21 on password manager usage among older adult</li>
             <li><span class="badge badge-secondary">Aug 2020</span> Timothy J. Forman and Adam J. Aviv have a new paper accepted at ACSAC'20 on Double Patterns</li>
             <li><span class="badge badge-secondary">Aug 2020</span> Hassan Khan, Jason Ceci, Jonah Stegman, Adam J. Aviv, Rozita Dara, Ravi Kuber have a new paper accepted at ACSAC'20 on PIN usage</li>
