--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
         <div class="container news">
           <h4>News</h4>
           <ul>
-            <li><span class="badge badge-secondary">Nov 2020</span> GWUSEC lab open house scheduled for Nov. 11, 2020 from 11:00am-12:30pm (EST). All are welcome. Register <a href="https://docs.google.com/forms/d/e/1FAIpQLScDpWNzjybJ1eV58owdMn-EA1LUHQbVRqaNKpMF6jex5FkmPw/viewform?usp=sf_link">here</a>. </li>
 
+            <li><span class="badge badge-secondary">Nov 2020</span> GWUSEC lab open house scheduled for Nov. 11, 2020 from 11:00am-12:30pm (EST). All are welcome. Register <a href="https://docs.google.com/forms/d/e/1FAIpQLScDpWNzjybJ1eV58owdMn-EA1LUHQbVRqaNKpMF6jex5FkmPw/viewform?usp=sf_link">here</a>. </li>
+            <li><span class="badge badge-secondary">Nov 2020</span> Hirak Ray, Flynn Wolf, Ravi Kuber and Adam J. Aviv have a new paper accepted at PoPETS'21 on privacy perceptions in older adults</li>
+            <li><span class="badge badge-secondary">Nov 2020</span> Rahel A. Fainchtein, Adam J. Aviv, Micah Sherr, Stephen Ribaudo, and Armaan Khullar have a new paper accepted at PoPETS'21 on Smart DNS</li>            
             <li><span class="badge badge-secondary">Oct 2020</span> Hirak Ray, Flynn Wolf, Ravi Kuber and Adam J. Aviv have a new paper accepted at USENIX Sec'21 on password manager usage among older adult</li>
             <li><span class="badge badge-secondary">Aug 2020</span> Timothy J. Forman and Adam J. Aviv have a new paper accepted at ACSAC'20 on Double Patterns</li>
             <li><span class="badge badge-secondary">Aug 2020</span> Hassan Khan, Jason Ceci, Jonah Stegman, Adam J. Aviv, Rozita Dara, Ravi Kuber have a new paper accepted at ACSAC'20 on PIN usage</li>
@@ -250,6 +252,16 @@
                 <li>Michelle Mazurek</li>
                 <li>Noel Wartford</li>
               </ul>
+              <li> Security Privacy Interaction Lab at the University of Michigan (UM) </li>
+              <ul>
+                <li> Florian Schaub </li>
+                <li> Yixin Zou </li>
+              </ul>
+              <li> <a href="https://seclab.cs.georgetown.edu/">Georgetown SecLab</a></li>
+              <ul>
+              <li> Micah Sherr </li>
+              <li> Rahel Fainchtein </li>
+              </ul>
             </ul>
           </div>
           <h3> Alumn/Past Members </h3>
@@ -351,6 +363,14 @@
                 <a id="pubs"></a>
                 <h2>Publications </h2>
                 <ul class="list-group">
+                  <li class="list-group-item" aria-disabled="true">
+                    Hirak Ray, Flynn Wolf, Ravi Kuber, Adam J. Aviv. `Warn Them'' or ``Just Block Them''?: Comparing Privacy Concerns of Older and Working Age Adults. In the proceedings of the Privacy Enhancing Technology Symposium (PoPets'21). Jul. 2021. 
+                    </li>
+
+                  <li class="list-group-item" aria-disabled="true">
+                    Rahel A. Fainchtein, Adam A. Aviv, Micah Sherr, Stephen Ribaudo, and Armaan Khullar. Holes in the Geofence: Privacy Vulnerabilities in “Smart” DNS Services. In the proceedings of the Privacy Enhancing Technology Symposium (PoPets'21). Jul. 2021. 
+                    </li>
+                  
                   <li class="list-group-item" aria-disabled="true">
                     Hirak Ray, Flynn Wolf, Ravi Kuber, Adam J. Aviv. Why Older Adults (Don't) Use Password Managers. In the proceedings of the 2021 USENIX Security Symposium (Sec'21). Aug. 2021. (<a href="https://arxiv.org/abs/2010.01973">arxiv pre-print</a>)
                     </li>
