--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container news">
           <h4>News</h4>
           <ul>
-
+            <li><span class="badge badge-secondary">Feb 2021</span> Ian Martiny, Gabriel Kaptchuk, Adam J. Aviv, Daniel S. Roche, and Eric Wustrow have a new paper accepted at NDSS'21 </li>
             <li><span class="badge badge-secondary">Nov 2020</span> GWUSEC lab open house scheduled for Nov. 11, 2020 from 11:00am-12:30pm (EST). All are welcome. Register <a href="https://docs.google.com/forms/d/e/1FAIpQLScDpWNzjybJ1eV58owdMn-EA1LUHQbVRqaNKpMF6jex5FkmPw/viewform?usp=sf_link">here</a>. </li>
             <li><span class="badge badge-secondary">Nov 2020</span> Hirak Ray, Flynn Wolf, Ravi Kuber and Adam J. Aviv have a new paper accepted at PoPETS'21 on privacy perceptions in older adults</li>
             <li><span class="badge badge-secondary">Nov 2020</span> Rahel A. Fainchtein, Adam J. Aviv, Micah Sherr, Stephen Ribaudo, and Armaan Khullar have a new paper accepted at PoPETS'21 on Smart DNS</li>            
@@ -363,6 +363,9 @@
                 <a id="pubs"></a>
                 <h2>Publications </h2>
                 <ul class="list-group">
+                  <li class="list-group-item" aria-disabled="true">
+                    Ian Martiny, Gabriel Kaptchuk, Adam J. Aviv, Daniel S. Roche, and Eric Wustrow. Improving Signal’s Sealed Sender. In the proceedings of the 2021 Network and Distributed Systems Symposium. NDSS'21. Feb 2021. (<a href="https://adamaviv.com/static/www/papers/martiny2021signal.pdf">pdf</a>)
+                  </li>
                   <li class="list-group-item" aria-disabled="true">
                     Hirak Ray, Flynn Wolf, Ravi Kuber, Adam J. Aviv. `Warn Them'' or ``Just Block Them''?: Comparing Privacy Concerns of Older and Working Age Adults. In the proceedings of the Privacy Enhancing Technology Symposium (PoPets'21). Jul. 2021. 
                     </li>
