Adding Elena Korkes

--- a/index.html
+++ b/index.html
@@ -235,6 +235,14 @@
               Undergraduate
               <br>
             </div>
+            <div class="col-sm text-center">
+              <img src="imgs/people/016_elena.jpg" width="200" alt="Elena Korkes" class="img-thumbnail">
+              <br>
+              Elena Korkes
+              <br>
+              Undergraduate
+              <br>
+            </div>
             
           </div>
           <em>If you are a current lab member or collaborator and would like to be added to the list of members, submit a pull request to the webpage repository.</em>
