--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <div class="container news">
           <h4>News</h4>
           <ul>
+            <li><span class="badge badge-secondary">Apr 2021</span> Peter Mayer, Yixin Zou, Florian Schaub, and Adam J. Aviv have a new paper accepted at USENIX Sec''21 </li>
             <li><span class="badge badge-secondary">Feb 2021</span> Ian Martiny, Gabriel Kaptchuk, Adam J. Aviv, Daniel S. Roche, and Eric Wustrow have a new paper accepted at NDSS'21 </li>
             <li><span class="badge badge-secondary">Nov 2020</span> GWUSEC lab open house scheduled for Nov. 11, 2020 from 11:00am-12:30pm (EST). All are welcome. Register <a href="https://docs.google.com/forms/d/e/1FAIpQLScDpWNzjybJ1eV58owdMn-EA1LUHQbVRqaNKpMF6jex5FkmPw/viewform?usp=sf_link">here</a>. </li>
             <li><span class="badge badge-secondary">Nov 2020</span> Hirak Ray, Flynn Wolf, Ravi Kuber and Adam J. Aviv have a new paper accepted at PoPETS'21 on privacy perceptions in older adults</li>
@@ -371,6 +372,9 @@
                 <a id="pubs"></a>
                 <h2>Publications </h2>
                 <ul class="list-group">
+                  <li class="list-group-item" aria-disabled="true">
+                    Peter Mayer, Yixin Zou, Florian Schaub, and Adam J. Aviv. "Now I'm a bit angry:" Individuals' Awareness, Perception, and Responses to Data Breaches that Affected Them. 30th USENIX Security Symposium (USENIX Security 21). USENIX Association. Aug 2021. (<a href="https://www.usenix.org/system/files/sec21fall-mayer.pdf">pdf</a>)
+                  </li>
                   <li class="list-group-item" aria-disabled="true">
                     Ian Martiny, Gabriel Kaptchuk, Adam J. Aviv, Daniel S. Roche, and Eric Wustrow. Improving Signal’s Sealed Sender. In the proceedings of the 2021 Network and Distributed Systems Symposium. NDSS'21. Feb 2021. (<a href="https://adamaviv.com/static/www/papers/martiny2021signal.pdf">pdf</a>)
                   </li>
