adding details about papers

--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
         <div class="container news">
           <h4>News</h4>
           <ul>
-            <li><span class="badge badge-secondary">Apr 2021</span> Peter Mayer, Yixin Zou, Florian Schaub, and Adam J. Aviv have a new paper accepted at USENIX Sec''21 </li>
+            <li><span class="badge badge-secondary">June 2021</span> Noel Warford, Collins Munyendo, Ashna Mediratta, Adam J. Aviv, and Michelle L. Mazurek have a new paper accepted at USENIX Sec'21 </li>
+            <li><span class="badge badge-secondary">June 2021</span> Flynn Wolf, Ravi Kuber, and Adam J. Aviv have a new paper accepted at USENIX Sec'21 </li>
+            <li><span class="badge badge-secondary">June 2021</span> Florian Farke, David Balash, Maximilian Golla, Markus, Markus Dürmuth, and Adam J. Aviv have a new paper accepted at USENIX Sec'21 </li>
+            <li><span class="badge badge-secondary">Apr 2021</span> Peter Mayer, Yixin Zou, Florian Schaub, and Adam J. Aviv have a new paper accepted at USENIX Sec'21 </li>
             <li><span class="badge badge-secondary">Feb 2021</span> Ian Martiny, Gabriel Kaptchuk, Adam J. Aviv, Daniel S. Roche, and Eric Wustrow have a new paper accepted at NDSS'21 </li>
             <li><span class="badge badge-secondary">Nov 2020</span> GWUSEC lab open house scheduled for Nov. 11, 2020 from 11:00am-12:30pm (EST). All are welcome. Register <a href="https://docs.google.com/forms/d/e/1FAIpQLScDpWNzjybJ1eV58owdMn-EA1LUHQbVRqaNKpMF6jex5FkmPw/viewform?usp=sf_link">here</a>. </li>
             <li><span class="badge badge-secondary">Nov 2020</span> Hirak Ray, Flynn Wolf, Ravi Kuber and Adam J. Aviv have a new paper accepted at PoPETS'21 on privacy perceptions in older adults</li>
@@ -373,34 +376,44 @@
                 <h2>Publications </h2>
                 <ul class="list-group">
                   <li class="list-group-item" aria-disabled="true">
+                    Flynn Wolf, Adam J. Aviv, and Ravi Kuber.  Security Obstacles and Motivationsfor Small Businesses from a CISO’s Perspective. 30th USENIX Security Symposium (USENIX Security 21). USENIX Association. Aug 2021.
+</li>
+
+                  <li class="list-group-item" aria-disabled="true">
+                    Florian Farke, David G. Balash, Maximilian Golla, Markus Dürmuth, and Adam J. Aviv. Are Privacy Dashboards Good for End Users? Evaluating User Perceptions and Reactions to Google's My Activity. 30th USENIX Security Symposium (USENIX Security 21). USENIX Association. Aug 2021. (<a href="https://arxiv.org/abs/2105.14066">arxiv</a>)
+</li>
+                  <li class="list-group-item" aria-disabled="true">
+                    Noel Warford, Collins W. Munyendo, Ashna Mediratta, Adam J. Aviv, and Michelle L. Mazurek. Strategies and Perceived Risks of Sending Sensitive Documents. 30th USENIX Security Symposium (USENIX Security 21). USENIX Association. Aug 2021. (<a href="https://arxiv.org/abs/2105.14619">arxiv</a>)
+</li>
+                  <li class="list-group-item" aria-disabled="true">
                     Peter Mayer, Yixin Zou, Florian Schaub, and Adam J. Aviv. "Now I'm a bit angry:" Individuals' Awareness, Perception, and Responses to Data Breaches that Affected Them. 30th USENIX Security Symposium (USENIX Security 21). USENIX Association. Aug 2021. (<a href="https://www.usenix.org/system/files/sec21fall-mayer.pdf">pdf</a>)
                   </li>
                   <li class="list-group-item" aria-disabled="true">
                     Ian Martiny, Gabriel Kaptchuk, Adam J. Aviv, Daniel S. Roche, and Eric Wustrow. Improving Signal’s Sealed Sender. In the proceedings of the 2021 Network and Distributed Systems Symposium. NDSS'21. Feb 2021. (<a href="https://adamaviv.com/static/www/papers/martiny2021signal.pdf">pdf</a>)
                   </li>
                   <li class="list-group-item" aria-disabled="true">
-                    Hirak Ray, Flynn Wolf, Ravi Kuber, Adam J. Aviv. `Warn Them'' or ``Just Block Them''?: Comparing Privacy Concerns of Older and Working Age Adults. In the proceedings of the Privacy Enhancing Technology Symposium (PoPets'21). Jul. 2021. 
+                    Hirak Ray, Flynn Wolf, Ravi Kuber, Adam J. Aviv. "Warn Them" or "Just Block Them"?: Comparing Privacy Concerns of Older and Working Age Adults. In the proceedings of the Privacy Enhancing Technology Symposium (PoPets'21). Jul. 2021.  (<a href="https://petsymposium.org/2021/files/papers/issue2/popets-2021-0016.pdf">pdf</a>)
                     </li>
 
                   <li class="list-group-item" aria-disabled="true">
-                    Rahel A. Fainchtein, Adam A. Aviv, Micah Sherr, Stephen Ribaudo, and Armaan Khullar. Holes in the Geofence: Privacy Vulnerabilities in “Smart” DNS Services. In the proceedings of the Privacy Enhancing Technology Symposium (PoPets'21). Jul. 2021. 
+                    Rahel A. Fainchtein, Adam A. Aviv, Micah Sherr, Stephen Ribaudo, and Armaan Khullar. Holes in the Geofence: Privacy Vulnerabilities in “Smart” DNS Services. In the proceedings of the Privacy Enhancing Technology Symposium (PoPets'21). Jul. 2021. (<a href="https://petsymposium.org/2021/files/papers/issue2/popets-2021-0022.pdf">pdf</a>)
                     </li>
                   
                   <li class="list-group-item" aria-disabled="true">
-                    Hirak Ray, Flynn Wolf, Ravi Kuber, Adam J. Aviv. Why Older Adults (Don't) Use Password Managers. In the proceedings of the 2021 USENIX Security Symposium (Sec'21). Aug. 2021. (<a href="https://arxiv.org/abs/2010.01973">arxiv pre-print</a>)
+                    Hirak Ray, Flynn Wolf, Ravi Kuber, Adam J. Aviv. Why Older Adults (Don't) Use Password Managers. In the proceedings of the 2021 USENIX Security Symposium (Sec'21). Aug. 2021. (<a href="https://arxiv.org/abs/2010.01973">arxiv</a>) (<a href="https://www.usenix.org/conference/usenixsecurity21/presentation/ray">pdf</a>)
                     </li>
 
                     <li class="list-group-item" aria-disabled="true">
-                      Timothy J. Forman and Adam J. Aviv. Double Patterns: A Usable Solution to Increase the Security of Android Unlock Patterns. In the proceedings of the 2020 Annual Computer Security Applications Conference (ACSAC'20). Dec. 2020. (<a href="https://arxiv.org/abs/2008.10681">arxiv pre-print</a>)
+                      Timothy J. Forman and Adam J. Aviv. Double Patterns: A Usable Solution to Increase the Security of Android Unlock Patterns. In the proceedings of the 2020 Annual Computer Security Applications Conference (ACSAC'20). Dec. 2020. (<a href="https://arxiv.org/abs/2008.10681">arxiv</a>)
                     </li>
                     <li class="list-group-item" aria-disabled="true">
-                        Hassan Khan, Jason Ceci, Jonah Stegman, Adam J. Aviv, Rozita Dara, Ravi Kuber. Widely Reused and Shared, Infrequently Updated, and Sometimes Inherited: A Holistic View of PIN Authentication in Digital Lives and Beyond. In the proceedings of the 2020 Annual Computer Security Applications Conference (ACSAC'20). Dec. 2020.  (<a href="https://arxiv.org/abs/2008.10697">arxiv pre-print</a>)
+                        Hassan Khan, Jason Ceci, Jonah Stegman, Adam J. Aviv, Rozita Dara, Ravi Kuber. Widely Reused and Shared, Infrequently Updated, and Sometimes Inherited: A Holistic View of PIN Authentication in Digital Lives and Beyond. In the proceedings of the 2020 Annual Computer Security Applications Conference (ACSAC'20). Dec. 2020.  (<a href="https://arxiv.org/abs/2008.10697">arxiv</a>)
                     </li>
                     <li class="list-group-item" aria-disabled="true">
                       Raina Samuel, Philipp Markert, Adam J. Aviv, and Iulian Neamtiu. <a href="https://www.usenix.org/conference/soups2020/presentation/samuel">Knock, Knock. Who's There? On the Security of LG's Knock Codes</a>. 2020 Symposium on Usable Security and Privacy (SOUPS'20). Pgs. 1-24. USENIX. 2020. (<a href="https://arxiv.org/abs/2006.03556">arxiv pre-print</a>)
                     </li>
                     <li class="list-group-item" aria-disabled="true">
-                        Philipp Markert, Daniel V. Bailey, Maximillian Golla, Markus D&uuml;rmuth, and Adam J. Aviv. <a href="https://doi.ieeecomputersociety.org/10.1109/SP40000.2020.00100">This PIN Can Be Easily Guessed: Analyzing the Security of Smartphone Unlock PINs</a>. 2020 IEEE Symposium on Security and Privacy (SP'20). Pgs. 1525-1542. IEEE Computer Society. 2020
+                        Philipp Markert, Daniel V. Bailey, Maximillian Golla, Markus D&uuml;rmuth, and Adam J. Aviv. <a href="https://doi.ieeecomputersociety.org/10.1109/SP40000.2020.00100">This PIN Can Be Easily Guessed: Analyzing the Security of Smartphone Unlock PINs</a>. 2020 IEEE Symposium on Security and Privacy (SP'20). Pgs. 1525-1542. IEEE Computer Society. 2020 (<a href="https://arxiv.org/abs/2003.04868">arxiv</a>)
                     </li>
                     <li class="list-group-item" aria-disabled="true">
                         Timothy J. Forman, Daniel S. Roche, and Adam J. Aviv. <a href="https://dl.acm.org/doi/abs/10.1145/3334480.3382922">Twice as Nice? A Preliminary Evaluation of Double Android Unlock Patterns</a>. Extended Abstracts of the 2020 CHI Conference on Human Factors in Computing Systems. (CHI EA ’20). Pgs. 1–7. Association for Computing Machinery. 2020
