--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                   
 
                   <li class="list-group-item" aria-disabled="true">
-                   David G. Balash, Dongkun Kim, Darika Shaibekova, Rahel A. Fainchtein, Micah Sherr, and Adam J. Aviv. Examining the Examiners: Students' Privacy and Security Perceptions of Online Proctoring Services. 17th Symposium on Usable Security and Privacy (SOUPS '21). Aug 2021.
+                   David G. Balash, Dongkun Kim, Darika Shaibekova, Rahel A. Fainchtein, Micah Sherr, and Adam J. Aviv. Examining the Examiners: Students' Privacy and Security Perceptions of Online Proctoring Services. 17th Symposium on Usable Security and Privacy (SOUPS '21). Aug 2021. (<a href="https://arxiv.org/abs/2106.05917">arxiv</a>)
                   </li>
 
                   <li class="list-group-item" aria-disabled="true">
