adding news expanding to the webpage

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
             <li><span class="badge badge-secondary">June 2021</span> Florian Farke, David Balash, Maximilian Golla, Markus, Markus Dürmuth, and Adam J. Aviv have a new paper accepted at USENIX Sec'21 </li>
             <li><span class="badge badge-secondary">Apr 2021</span> Peter Mayer, Yixin Zou, Florian Schaub, and Adam J. Aviv have a new paper accepted at USENIX Sec'21 </li>
             <li><span class="badge badge-secondary">Feb 2021</span> Ian Martiny, Gabriel Kaptchuk, Adam J. Aviv, Daniel S. Roche, and Eric Wustrow have a new paper accepted at NDSS'21 </li>
+            <li> <a href='javascript:void(0)' onclick="$('.2020-news').toggle('slow')">2020 News</a>  (click to reveal)</li>
+            <div class="2020-news"  style="display:none;">
+              <ul>
             <li><span class="badge badge-secondary">Nov 2020</span> GWUSEC lab open house scheduled for Nov. 11, 2020 from 11:00am-12:30pm (EST). All are welcome. Register <a href="https://docs.google.com/forms/d/e/1FAIpQLScDpWNzjybJ1eV58owdMn-EA1LUHQbVRqaNKpMF6jex5FkmPw/viewform?usp=sf_link">here</a>. </li>
             <li><span class="badge badge-secondary">Nov 2020</span> Hirak Ray, Flynn Wolf, Ravi Kuber and Adam J. Aviv have a new paper accepted at PoPETS'21 on privacy perceptions in older adults</li>
             <li><span class="badge badge-secondary">Nov 2020</span> Rahel A. Fainchtein, Adam J. Aviv, Micah Sherr, Stephen Ribaudo, and Armaan Khullar have a new paper accepted at PoPETS'21 on Smart DNS</li>            
@@ -102,6 +105,8 @@
             <li><span class="badge badge-secondary">May 2020</span> We've got a Twitter account <a href="https://twitter.com/gwusec">@gwusec</a>. Follow us for updates!</li>
             <li><span class="badge badge-secondary">May 2020</span> David Balash, Nelson Jaimes, and Collins Munyendo. Welcome aboard!</li>
             <li><span class="badge badge-secondary">May 2020</span> The lab website goes live!</li>
+              </ul>
+            </div>
           </ul>
         </div>
       </div>
@@ -443,6 +448,12 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <script>
+      function reveal(divname){
+          $(divname).show();
+      }
+    </script>
 </body>
 
 </html>
