updating reading group link

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     <li><strong>Security and Privacy Reading Group</strong>
                         <div class="badge badge-success">public</div>
                         <p>
-                            The <a href="https://gwu-cs-sp-reading-group.github.io">Security and Privacy Reading Group</a> is a weekly <strong>public</strong> event where we discuss a recent research article related to security and privacy.
+                            The <a href="https://gwusec.seas.gwu.edu/reading-group">Security and Privacy Reading Group</a> is a weekly <strong>public</strong> event where we discuss a recent research article related to security and privacy.
                             A discussion lead will prepare a short presentation that will kick off the discussion.
                             The reading group is also "brown bag lunch" and has a social component.
                         </p>
