--- a/index.html
+++ b/index.html
@@ -320,13 +320,13 @@
                             Friday 430-500. Currently meeting virtually.
                         </p>
                     </li>
-                    <li><strong>Social Hour/Lab Open House</strong>
+                    <li><strong>Tea Time</strong>
                         <div class="badge badge-success">public</div>
                         <p>
-                            Once a month, we have a social hour and lab open house where students, faculty, and prospective collaborators can socialize.
+                            We meet informally to have tea or coffee.
                         </p>
                         <p>
-                            <strike>Second Friday of every month from 430-530, during the academic year.</strike><br> Time/Place TBD as we assess social distancing requirements.
+                            Monday 330-430 -- restarting Fall 2021 (if safe to do so)
                         </p>
                     </li>
                 </ul>
