--- a/index.html
+++ b/index.html
@@ -383,6 +383,10 @@
                 <ul class="list-group">
 
                   <li class="list-group-item" aria-disabled="true">
+                    David G. Balash, Xiaoyuan (Owen) Wu, Miles Grant, Irwin Reyes, and Adam J. Aviv. Security and Privacy Perceptions of Third-Party Application Access for Google Accounts. 31st USENIX Security Symposium (USENIX Security 22). Aug 2022.
+                  </li>
+
+                  <li class="list-group-item" aria-disabled="true">
                     Collins Munyendo, Miles Grant, Philipp Markert, Timothy J. Forman, and Adam J. Aviv. <a href="https://www.usenix.org/conference/soups2021/presentation/munyendo">Using a Blocklist to Improve the Security of User Selection of Android Patterns </a>. 17th Symposium on Usable Security and Privacy (SOUPS '21). Aug 2021.
                   </li>
                   
