--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container news">
           <h4>News</h4>
           <ul>
-
+            <li><span class="badge badge-secondary">Sep 2021</span> David G. Balash, Xiaoyuan Wu, Miles Grant, Irwin Reyes, and Adam J. Aviv have a new paper at USENIX Security'22</li>
             <li><span class="badge badge-secondary">June 2021</span> Collins Munyendo, Miles Grant, Philipp Markert, Timothy J. Forman, and Adam J. Aviv have a new paper at SOUPS'21</li>
             <li><span class="badge badge-secondary">June 2021</span> David G. Balash, Dongkun Kim, Darika Shaibekova, Rahel A. Fainchtein, Micah Sherr, and Adam J. Aviv have a new paper at SOUPS'21</li>
             <li><span class="badge badge-secondary">June 2021</span> Danil V. Baily, Philipp Markert, and Adam J. Aviv have a new paper at SOUPS'21</li>
