updating reading group time

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                             The reading group is also "brown bag lunch" and has a social component.
                         </p>
                         <p>
-                            Tuesdays 1130-1230. Currently meeting virtually (email Prof. Aviv to be added to the mailing list).
+                            Wednesday 1130-1230. Currently meeting virtually (email Prof. Aviv to be added to the mailing list).
                         </p>
                     </li>
                     <li><strong>Lab Scrum Meetings</strong>
@@ -326,7 +326,7 @@
                             We meet informally to have tea or coffee.
                         </p>
                         <p>
-                            Monday 330-430 -- restarting Fall 2021 (if safe to do so)
+                            Monday 330-430 -- GWUSEC Lab in SEH
                         </p>
                     </li>
                 </ul>
