--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                             The reading group is also "brown bag lunch" and has a social component.
                         </p>
                         <p>
-                            Wednesday 1130-1230. Currently meeting virtually (email Prof. Aviv to be added to the mailing list).
+                            Wednesday 1130-1230 (Virtual) (email Prof. Aviv to be added to the mailing list)
                         </p>
                     </li>
                     <li><strong>Lab Scrum Meetings</strong>
@@ -317,7 +317,7 @@
                             Non collaborators are allowed to attend, by invitation.
                         </p>
                         <p>
-                            Friday 430-500. Currently meeting virtually.
+                            Friday 400-415 (Virtual)
                         </p>
                     </li>
                     <li><strong>Tea Time</strong>
@@ -343,17 +343,17 @@
                         <p>
                             We are always looking for new PhD students, and if you are applying to grad school and interested in usable security and privacy, please consider GW!
                             Please email Adam Aviv with any inquiries, but be mindful, we may not follow up with everyone.
-                            Obvious form emails sent enmass will not receive a response, so please be sure to write a personal email that notes some background about yourself and what kinds of projects you're interested in researching.
+                            Obvious form emails sent en mass will not receive a response, so please be sure to write a personal email that notes some background about yourself and what kinds of projects you're interested in researching.
                             <em>Do not attach a CV or resume</em>: just let us know who you are and why you want to join the lab.
                         </p>
                     </li>
                     <li><strong> GW Undergraduate/Masters Students </strong>
                         <p>
                             If you are a current GW student, either an undergraduate or masters students, the easiest way to get involved in the lab is to attend one of our public events.
-                            Participating in reading group or social hour is the fastest way to learn what is happening in the lab, as well as earn an invite to the lab meeting.
+                            Participating in reading group or social events are the fastest way to learn what is happening in the lab, as well as earn an invite to the lab meeting.
                         </p>
                         <p>
-                            You may also email Adam Aviv if you are interested in research project, but you will likely be directed to attend a public event.
+                            You may also email Adam Aviv if you are interested in research projects, but you will likely be directed to attend a public event.
                             If you cannot attend a public event, we can arrange other times to meet.
                         </p>
                     </li>
