--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <br>
               External Collaborator<br>
               <em>Assist. Prof./Co-Lab Director<br>
-                (starting Jul, 2021)</em>
+                (starting Oct, 2021)</em>
               <br>
             </div>
             <div class="col-sm text-center">
@@ -218,15 +218,6 @@
               Undergraduate
               <br>
             </div>
-            <div class="col-sm text-center">
-              <img src="imgs/people/013_don.jpg" width="200" alt="Dongkun Kim" class="img-thumbnail">
-              <br>
-              Dongkun Kim
-              <br>
-              Undergraduate
-              <br>
-            </div>
-
           </div>
           <div class="row mt-2 mb-4">
             <div class="col-sm text-center">
@@ -284,6 +275,7 @@
           </div>
           <h3> Alumn/Past Members </h3>
           <ul>
+            <li> Don Kim (UG)</li>
             <li> Tim Forman (USNA/BSE) <em> Now a ENS USN </em></li>
             <li> James Levy (MS)</li>
           </ul>
