--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="col-sm">
           <img src="imgs/icons/home.svg" alt="House icon"><br>
-          SEH 4000 Research Wing
+          SEH 4100 (Bubble Lab)
         </div>
         <div class="col-sm">
           <a href="https://github.com/gwusec">
@@ -111,7 +111,14 @@
           </ul>
         </div>
       </div>
-      
+
+      <div class="container group_photo content">
+        <h2> GWUSEC Lab Photo Aug 2021 </h2>
+        <center>
+          <img src="imgs/GWUSEC_group_photo_2021.jpeg" width="700" alt="GWUSEC Lab Group Photo August 2021">
+        </center>
+      </div>
+        
       <div class="container people content">
         <a id="people"></a>
         <h2> People </h2>
