update Yas info

--- a/index.html
+++ b/index.html
@@ -131,13 +131,14 @@
               <em>Co-Lab Director</em>
             </div>
             <div class="col-sm text-center">
-              <img src="imgs/people/002_yasemin.jpg" width="200" alt="Yasmine Acar" class="img-thumbnail">
+              <img src="imgs/people/002_yasemin.jpg" width="200" alt="Yasemin Acar" class="img-thumbnail">
               <br>
               <a href="https://yaseminacar.de/">Yasemin Acar</a>
               <br>
-              External Collaborator<br>
-              <em>Assist. Prof./Co-Lab Director<br>
-                (starting Oct, 2021)</em>
+                Asst. Prof.
+              <br>
+              <em>Co-Lab Director</em>
+          
               <br>
             </div>
             <div class="col-sm text-center">
